--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </div>
             </div>
 
-            <p>Tien jaar lang is er door de bewoners keihard gewerkt om Schoonschip te ontwerpen, ontwikkelen en te realiseren. Meer weten over de totstandkoming van ons project? Bezoek dan onze Greenprint.
+             <Div class="tekst1" p>Tien jaar lang is er door de bewoners keihard gewerkt om Schoonschip te ontwerpen, ontwikkelen en te realiseren. Meer weten over de totstandkoming van ons project? Bezoek dan onze Greenprint.
 
                 Schoonschip ligt in Buiksloterham, een wijk in Amsterdam-Noord waar de robuustheid van oude industrie hand in hand gaat met duurzame nieuwbouwprojecten.</p>
-           
+             </Div>
         </main>
 
 
